<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addstory.AddStoryActivity">

    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/preview_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <Button
        android:id="@+id/cameraBtn"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/open_camera"
        app:layout_constraintEnd_toStartOf="@+id/galeryBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewImage" />

    <Button
        android:id="@+id/galeryBtn"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/open_galery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cameraBtn"
        app:layout_constraintTop_toBottomOf="@+id/previewImage" />

    <Button
        android:id="@+id/uploadBtn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="@+id/galeryBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cameraBtn"
        app:layout_constraintTop_toBottomOf="@+id/getLocationBtn" />

    <Button
        android:id="@+id/getLocationBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_location"
        app:layout_constraintEnd_toEndOf="@+id/uploadBtn"
        app:layout_constraintStart_toStartOf="@+id/uploadBtn"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/galeryBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cameraBtn"
        app:layout_constraintTop_toBottomOf="@+id/cameraBtn" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lat_long"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/descriptionInput"
        app:layout_constraintStart_toStartOf="@+id/descriptionInput"
        app:layout_constraintTop_toBottomOf="@+id/descriptionInput" />

</androidx.constraintlayout.widget.ConstraintLayout>